--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,9 @@
 .body{
     width: 100%;
     min-height: 100vh;
+    
     background-color: black;
+    display: flex;
+    flex-direction: column;
+
 }
