--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,5 +1,6 @@
 .navbar{
     height: 90px;
+    width: 100%;
     background-color: rgb(42, 42, 42);
     display: flex;
     align-items: center;
@@ -32,11 +33,11 @@ input{
 }
 
 .lengthIncrease{
-    animation: inputLengthInc 2s ease;
+    animation: inputLengthInc 1s ease;
 }
 
 .lengthDecrease{
-    animation: inputLengthDec 2s ease;
+    animation: inputLengthDec 1s ease;
 }
 
 @keyframes inputLengthInc {
@@ -53,5 +54,10 @@ input{
     }
     100%{
         width: 150px;
+    }
+}
+@media (max-width:600px) {
+    .left{
+        font-size: 20px;
     }
 }
