--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,5 +3,8 @@
     <div class="center">
         <div class="search-opt"></div><input  type="text" appAnimate [placeholder]="'Search Games...'">
     </div>
-    <div class="right"></div>
+    <div class="right">
+        <a href="/">home</a>
+        <a href="/shit">wreapper</a>
+    </div>
 </div>
