--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,7 +1,7 @@
 <div class="body">
     <div class="mbody">
         <div class="wrapper" *ngFor="let item of categoies">
-            <app-body-wrapper></app-body-wrapper>
+            <app-body-wrapper [heading]="item"></app-body-wrapper>
         </div>
     </div>
 </div>
