--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,13 @@
     padding: 0%;
     box-sizing: border-box;
     color: aliceblue;
+}    
+::-webkit-scrollbar{
+    width: 5px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: aliceblue;
+}
+::-webkit-scrollbar-track{
+    background-color: black;
 }
