--- a/src/app/body/body-wrapper/body-wrapper.component.html
+++ b/src/app/body/body-wrapper/body-wrapper.component.html
@@ -1,3 +1,5 @@
 
-<div class="">{{heading}}</div>
-<app-body-content></app-body-content>
+<div class="heading">{{heading}}</div>
+<div class="scroll">
+    <app-body-content></app-body-content>
+</div>
