--- a/src/app/body/body-wrapper/body-content/body-content.component.css
+++ b/src/app/body/body-wrapper/body-content/body-content.component.css
@@ -1,3 +1,9 @@
-.scroll{
-    
+
+.box{
+  width: 350px;
+  height: 200px;
+  margin: 5px;
+  border-radius: 5px; 
+  background-color: aquamarine;
+  
 }
