--- a/src/app/body/body-wrapper/body-content/body-content.component.html
+++ b/src/app/body/body-wrapper/body-content/body-content.component.html
@@ -1,3 +1,6 @@
-<div class="scroll">
-    
-</div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
