--- a/src/app/body/body-wrapper/body-content/body-content.component.html
+++ b/src/app/body/body-wrapper/body-content/body-content.component.html
@@ -1,6 +1,44 @@
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
+<div class="box">
+    <div class="mdetails">
+        <div class="details">
+            <div class="">GTA V</div>
+            <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
+            <div class="">2013</div>
+        </div>
+      
+    </div>
+</div>
+<div class="box">
+    <div class="mdetails">
+        <div class="details">
+            <div class="">GTA V</div>
+            <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
+            <div class="">2013</div>
+        </div>
+      
+    </div>
+</div>
+
+<div class="box">
+    <div class="mdetails">
+        <div class="details">
+            <div class="">GTA V</div>
+            <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
+            <div class="">2013</div>
+        </div>
+      
+    </div>
+</div>
+
+<div class="box">
+    <div class="mdetails">
+        <div class="details">
+            <div class="">GTA V</div>
+            <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
+            <div class="">2013</div>
+        </div>
+      
+    </div>
+</div>
+
+
