--- a/src/app/body/body-wrapper/body-content/body-content.component.css
+++ b/src/app/body/body-wrapper/body-content/body-content.component.css
@@ -34,10 +34,19 @@
     padding: 10px;
     text-align: justify;
     cursor: pointer;
+    animation: hovering 1s ease;
 
   
 }
 .box:hover .mdetails{
     display: block;
   
+}
+@keyframes hovering {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
