--- a/src/app/body/body-wrapper/body-content/body-content.component.css
+++ b/src/app/body/body-wrapper/body-content/body-content.component.css
@@ -11,32 +11,41 @@
 }
 .mdetails{
     display: none;
-    transition: 0.3s ease;
+    top: 0;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.279);
+    background-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.963),
+        rgba(0, 0, 0, 0.624),
+        rgba(0, 0, 0, 0.114)
+      );
 }
 
 
 .details{
+ 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.279);
-    background-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.963),
-    rgba(0, 0, 0, 0.624),
-    rgba(0, 0, 0, 0.114)
-  );
-    width: 100%;
-    transition: 0.3s ease;
-    height: 100%;
     padding: 10px;
     text-align: justify;
     cursor: pointer;
     animation: hovering 1s ease;
-
+width: 100%;
+height: 100%;
   
+}
+img{
+    position: relative;
+    width: 100%;
+    height: 200px;
+    border-radius: 5px;
+    z-index: 0.1;
 }
 .box:hover .mdetails{
     display: block;
