--- a/src/app/body/body-wrapper/body-content/body-content.component.html
+++ b/src/app/body/body-wrapper/body-content/body-content.component.html
@@ -1,7 +1,8 @@
 <div class="box">
+    <img src="../../../../assets/Screenshot from 2023-09-01 21-38-18.png" alt="">
     <div class="mdetails">
         <div class="details">
-            <div class="">GTA V</div>
+            <div class=""><strong>GTA V</strong></div>
             <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
             <div class="">2013</div>
         </div>
@@ -9,36 +10,46 @@
     </div>
 </div>
 <div class="box">
+    <img src="../../../../assets/Screenshot from 2023-09-01 21-38-18.png" alt="">
     <div class="mdetails">
         <div class="details">
-            <div class="">GTA V</div>
+            <div class=""><strong>GTA V</strong></div>
             <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
             <div class="">2013</div>
         </div>
       
     </div>
 </div>
-
 <div class="box">
+    <img src="../../../../assets/Screenshot from 2023-09-01 21-38-18.png" alt="">
     <div class="mdetails">
         <div class="details">
-            <div class="">GTA V</div>
+            <div class=""><strong>GTA V</strong></div>
             <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
             <div class="">2013</div>
         </div>
       
     </div>
 </div>
-
 <div class="box">
+    <img src="../../../../assets/Screenshot from 2023-09-01 21-38-18.png" alt="">
     <div class="mdetails">
         <div class="details">
-            <div class="">GTA V</div>
+            <div class=""><strong>GTA V</strong></div>
             <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
             <div class="">2013</div>
         </div>
       
     </div>
 </div>
-
-
+<div class="box">
+    <img src="../../../../assets/Screenshot from 2023-09-01 21-38-18.png" alt="">
+    <div class="mdetails">
+        <div class="details">
+            <div class=""><strong>GTA V</strong></div>
+            <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
+            <div class="">2013</div>
+        </div>
+      
+    </div>
+</div>
