--- a/src/app/body/body-wrapper/body-content/body-content.component.html
+++ b/src/app/body/body-wrapper/body-content/body-content.component.html
@@ -1,4 +1,4 @@
-<div class="box" (click)="getData()">
+<div class="box" (click)="getApi('action',1)">
     <img src="../../../../assets/Screenshot from 2023-09-01 21-38-18.png" alt="">
     <div class="mdetails">
         <div class="details">
