problem with render

--- a/src/app/body/body-wrapper/body-content/body-content.component.html
+++ b/src/app/body/body-wrapper/body-content/body-content.component.html
@@ -1,55 +1,33 @@
-<div class="box" (click)="getApi('action',1)">
-    <img src="../../../../assets/Screenshot from 2023-09-01 21-38-18.png" alt="">
-    <div class="mdetails">
-        <div class="details">
-            <div class=""><strong>GTA V</strong></div>
-            <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
-            <div class="">2013</div>
+<div class="" *ngIf="loadingg then dataf" (load)='getApi("action",1)'>
+    <ng-container *ngFor="let item of result"  >
+        <div class="box">
+            <img src="../../../../assets/Screenshot from 2023-09-01 21-38-18.png" alt="">
+            <div class="mdetails">
+                <div class="details">
+                    <div class=""><strong>GTA V</strong></div>
+                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
+                    <div class="">2013</div>
+                </div>
+              
+            </div>
         </div>
-      
-    </div>
+    </ng-container>
 </div>
-<div class="box">
-    <img src="../../../../assets/Screenshot from 2023-09-01 21-38-18.png" alt="">
-    <div class="mdetails">
-        <div class="details">
-            <div class=""><strong>GTA V</strong></div>
-            <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
-            <div class="">2013</div>
+
+<ng-template #dataf>
+    
+</ng-template>
+
+<ng-template #loadingg>
+    <div class="box">
+       
+        <div class="mdetails">
+            <div class="details">
+                <div class=""><strong>GTA V</strong></div>
+                <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
+                <div class="">2013</div>
+            </div>
+          
         </div>
-      
     </div>
-</div>
-<div class="box">
-    <img src="../../../../assets/Screenshot from 2023-09-01 21-38-18.png" alt="">
-    <div class="mdetails">
-        <div class="details">
-            <div class=""><strong>GTA V</strong></div>
-            <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
-            <div class="">2013</div>
-        </div>
-      
-    </div>
-</div>
-<div class="box">
-    <img src="../../../../assets/Screenshot from 2023-09-01 21-38-18.png" alt="">
-    <div class="mdetails">
-        <div class="details">
-            <div class=""><strong>GTA V</strong></div>
-            <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
-            <div class="">2013</div>
-        </div>
-      
-    </div>
-</div>
-<div class="box">
-    <img src="../../../../assets/Screenshot from 2023-09-01 21-38-18.png" alt="">
-    <div class="mdetails">
-        <div class="details">
-            <div class=""><strong>GTA V</strong></div>
-            <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
-            <div class="">2013</div>
-        </div>
-      
-    </div>
-</div>
+</ng-template>
