timeout to fetch full data

--- a/src/app/body/body-wrapper/body-content/body-content.component.css
+++ b/src/app/body/body-wrapper/body-content/body-content.component.css
@@ -4,7 +4,7 @@
   height: 200px;
   margin: 5px;
   border-radius: 5px; 
-  background-color: aquamarine;
+  background-color:rgb(83, 83, 83);
   position: relative;
   transition: 0.3s ease;
   color: white;
