--- a/src/app/body/body-wrapper/body-content/body-content.component.html
+++ b/src/app/body/body-wrapper/body-content/body-content.component.html
@@ -1,18 +1,20 @@
 
 <div *ngFor="let item of result">
-    <ng-container *ngIf="!loading; else loadingg"></ng-container>
-    <div class="box">
-        <img [src]="item.background_image" alt="item.name">
-        <div class="mdetails">
-            <div class="details">
-                <div class=""><strong>{{item.name}}</strong></div>
-                
-                <div class="">{{item.released}}</div>
-                
+    <ng-container *ngIf="!loading; else loadingg">
+        <div class="box">
+            <img [src]="item.background_image" alt="item.name">
+            <div class="mdetails">
+                <div class="details">
+                    <div class=""><strong>{{item.name}}</strong></div>
+                    
+                    <div class="">{{item.released.slice(0,4)}}</div>
+                    
+                </div>
+              
             </div>
-          
         </div>
-    </div>
+    </ng-container>
+    
 
 </div>
 
