--- a/src/app/body/body-wrapper/body-content/body-content.component.html
+++ b/src/app/body/body-wrapper/body-content/body-content.component.html
@@ -19,14 +19,10 @@
 </div>
 
 <ng-template #loadingg>
-    <div class="box">
+    <div class="box animate">
        
         <div class="mdetails">
-            <div class="details">
-                <div class=""><strong>GTA V</strong></div>
-                <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi consectetur...</div>
-                <div class="">2013</div>
-            </div>
+          
           
         </div>
     </div>
