--- a/src/app/search-result/search-result.component.css
+++ b/src/app/search-result/search-result.component.css
@@ -4,5 +4,16 @@
     gap: 5px;
  width: 80%;
  margin: auto;
- background-color: aqua;
+
+ margin-top: 20px;
+}
+.container{
+  
+    height: 200px;
+    margin: 5px;
+    border-radius: 5px; 
+    background-color:rgb(83, 83, 83);
+    position: relative;
+    transition: 0.3s ease;
+    color: white;
 }
