--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,11 @@
 ::-webkit-scrollbar-track{
     background-color: black;
 }
+@keyframes hovering {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
