--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <app-body ></app-body>
 </div>
 <ng-template #searchResult>
- <app-search-result [searchInput]="navref.search" [result]="navref.result"></app-search-result>
+ <app-search-result [searchInput]="navref.search" [result]="navref.result" [load]="navref.loading"></app-search-result>
 </ng-template>
 
 </div>
