--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <div class="left">PlayFolio</div>
     <div class="center">
         <div class="search-opt"></div>
-        <input  type="text" appAnimate (input)="load($event)" [placeholder]="'Search Games...'">
+        <input  type="text" appAnimate (input)="load($event)" [placeholder]="'Search Games...'" autofocus>
     </div>
     <div class="right">
    
