--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
-<div class="body" >
-<app-navbar #navref></app-navbar>
-<div *ngIf="!navref.search;else searchResult">
-  <app-body ></app-body>
-</div>
-<ng-template #searchResult>
- <app-search-result [searchInput]="navref.search" [result]="navref.result" [load]="navref.loading"></app-search-result>
-</ng-template>
-
+<div class="body">
+  <app-navbar #navref></app-navbar>
+  <div *ngIf="!navref.search; else searchResult">
+    <app-body></app-body>
+  </div>
+  <ng-template #searchResult>
+    <app-search-result
+      [searchInput]="navref.search"
+      [result]="navref.result"
+      [load]="navref.loading"
+    ></app-search-result>
+  </ng-template>
 </div>
