--- a/src/app/body/body-wrapper/body-content/body-content.component.html
+++ b/src/app/body/body-wrapper/body-content/body-content.component.html
@@ -1,7 +1,7 @@
 
 <div class="flex" *ngIf="!loading; else loadingg">
     <ng-container  *ngFor="let item of result">
-        <div class="box">
+        <div class="box" (click)="openGame(item)">
             <img [src]="item.background_image" alt="item.name">
             <div class="mdetails">
                 <div class="details">
