problem with gertting data from child

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,8 +1,7 @@
 <div class="body">
-    <div class="mbody">
-        <div class="wrapper" *ngFor="let item of categoies">
-            
-            <app-body-wrapper [heading]="item"></app-body-wrapper>
-        </div>
+  <div class="mbody">
+    <div class="wrapper" *ngFor="let item of categoies">
+      <app-body-wrapper #wrapperRef [heading]="item"></app-body-wrapper>
     </div>
+  </div>
 </div>
