--- a/src/app/body/body-wrapper/body-wrapper.component.html
+++ b/src/app/body/body-wrapper/body-wrapper.component.html
@@ -1,47 +1,35 @@
-
-<div class="heading">{{heading}}</div>
+<div class="heading">{{ heading }}</div>
 <div class="scroll">
-    
-<div class="flex" *ngIf="!loading; else loadingg">
-    <ng-container  *ngFor="let item of result">
-        <div class="box" (click)="openGame(item)">
-            <img [src]="item.background_image" alt="item.name">
-            <div class="mdetails">
-                <div class="details">
-                    <div class=""><strong>{{item.name}}</strong></div>
-                    
-                    <div class="">{{item.released.slice(0,4)}}</div>
-                    
-                </div>
-              
+  <div class="flex" *ngIf="!loading; else loadingg">
+    <ng-container *ngFor="let item of result">
+      <div class="box" (click)="openGame(item)">
+        <img [src]="item.background_image" alt="item.name" />
+        <div class="mdetails">
+          <div class="details">
+            <div class="">
+              <strong>{{ item.name }}</strong>
             </div>
+
+            <div class="">{{ item.released.slice(0, 4) }}</div>
+          </div>
         </div>
+      </div>
     </ng-container>
-    
-
-</div>
-<ng-template #loadingg>
+  </div>
+  <ng-template #loadingg>
     <div class="flex">
-    <div class="box animate">
+      <div class="box animate">
         <div class="mdetails"></div>
-     
-    </div>
-    <div class="box animate">
+      </div>
+      <div class="box animate">
         <div class="mdetails"></div>
-     
-    </div>
-    <div class="box animate">
+      </div>
+      <div class="box animate">
         <div class="mdetails"></div>
-     
-    </div>
-    <div class="box animate">
+      </div>
+      <div class="box animate">
         <div class="mdetails"></div>
-     
+      </div>
     </div>
-    </div>
-
-   
-</ng-template>
-
-
+  </ng-template>
 </div>
