--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -9,3 +9,36 @@
     width: 80%;
   
 }
+.game-info{
+width: 100%; 
+    display:flex;
+    padding: 20px;
+}
+.left{
+ 
+margin-left: 20px;
+
+ 
+}
+.right{
+    position: relative;
+}
+.name{
+    font-size: 30px;
+    color: white;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+img{
+    width: 400px;
+    height: 300px;
+}
+@media (max-width:700px){
+    .game-info{
+        flex-direction: column;
+    }
+    img{
+        width: 100%;
+        height: 40vw;
+       
+    }
+}
