--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -12,6 +12,17 @@
                 <div class="m">Game Genre</div>
             </div>
         </div>
+        <div class="imgs">
+            <div class="scroll">
+                <div class="container"></div>
+                <div class="container"></div>
+                <div class="container"></div>
+                <div class="container"></div>
+                <div class="container"></div>
+                <div class="container"></div>
+                <div class="container"></div>
+            </div>
+        </div>
        
     </div>
 </div>
