--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -24,13 +24,33 @@ margin-left: 20px;
     position: relative;
 }
 .name{
-    font-size: 30px;
+    font-size: 6vw;
     color: white;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.m{
+    font-size: larger;
+   font-style: italic;
 }
 img{
-    width: 400px;
+    width: 450px;
     height: 300px;
+}
+.container {
+    width:340px;
+    height: 200px;
+    background-color: rgb(69, 68, 68);
+}
+.scroll{
+    display: flex;
+    gap: 2px;
+  width:max-content 
+}
+.imgs{
+    overflow-x: scroll;
+}
+::-webkit-scrollbar{
+    height: 5px;
 }
 @media (max-width:700px){
     .game-info{
@@ -40,5 +60,10 @@ img{
         width: 100%;
         height: 40vw;
        
+    }
+    .container {
+        width:300px;
+        height: 180px;
+        background-color: rgb(69, 68, 68);
     }
 }
