--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -59,6 +59,14 @@ ng-template{
 .flex{
     display: flex;
 }
+i{
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 @media (max-width:700px){
     .game-info{
         flex-direction: column;
