--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -1,7 +1,7 @@
 
     <div class="body" *ngIf="!load ; else loading ">
         <ng-container *ngFor="let item of result">
-            <div class="box">
+            <div class="box" (click)="clickToView(item)">
                 <img [src]="item.background_image" alt="item.name">
                 <div class="mdetails">
                     <div class="details">
