--- a/src/app/body/body-wrapper/body-wrapper.component.css
+++ b/src/app/body/body-wrapper/body-wrapper.component.css
@@ -1,87 +1,79 @@
-.heading{
-    margin-top: 20px;
-    font-size: 30px;
-    color: aliceblue;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.heading {
+  margin-top: 20px;
+  font-size: 30px;
+  color: aliceblue;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-.scroll{
-    width: 100%;
-    height: 300px;
-    display: flex;
-    align-items: center;
-    overflow-x: scroll
+.scroll {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  overflow-x: scroll;
 }
-app-body-content{
-
-    display: flex;
-    align-items: center;
-    
+app-body-content {
+  display: flex;
+  align-items: center;
 }
-::-webkit-scrollbar{
-height: 5px;
+::-webkit-scrollbar {
+  height: 5px;
 }
 
-.box{
-    width: 350px;
-    height: 200px;
-    margin: 5px;
-    border-radius: 5px; 
-    background-color:rgb(83, 83, 83);
-    position: relative;
-    transition: 0.3s ease;
-    color: white;
-    
-  }
-  .flex{
-    display: flex;
-    align-items: center;
-  }
-  .mdetails{
-      
-      top: 0;
-      position: absolute;
-      height: 100%;
-      width: 100%;
-      z-index: 1;
-      background-color: rgba(0, 0, 0, 0.279);
-      background-image: linear-gradient(
-          to top,
-          rgba(0, 0, 0, 0.963),
-          rgba(0, 0, 0, 0.624),
-          rgba(0, 0, 0, 0.114)
-        );
-  }
-  .animate{
-      animation: hovering 1s infinite;
-  }
-  
-  
-  .details{
-   
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 10px;
-      text-align: justify;
-      cursor: pointer;
-      animation: hovering 2s ease;
+.box {
+  width: 350px;
+  height: 200px;
+  margin: 5px;
+  border-radius: 5px;
+  background-color: rgb(83, 83, 83);
+  position: relative;
+  transition: 0.3s ease;
+  color: white;
+}
+.flex {
+  display: flex;
+  align-items: center;
+}
+.mdetails {
+  top: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.279);
+  background-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.963),
+    rgba(0, 0, 0, 0.624),
+    rgba(0, 0, 0, 0.114)
+  );
+}
+.animate {
+  animation: hovering 1s infinite;
+}
+
+.details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  text-align: justify;
+  cursor: pointer;
+  animation: hovering 2s ease;
   width: 100%;
   height: 100%;
-    
-  }
-  img{
-      position: relative;
-      width: 100%;
-      height: 200px;
-      border-radius: 5px;
-      z-index: 0.1;
-  }
-  .box:hover .mdetails{
-      display: none;
-      animation: hovering 3s infinite;
-  }
-  ng-template{
-    overflow: scroll;
-  }
-  
+}
+img {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  border-radius: 5px;
+  z-index: 0.1;
+}
+.box:hover .mdetails {
+  display: none;
+  animation: hovering 3s infinite;
+}
+ng-template {
+  overflow: scroll;
+}
