--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,63 +1,63 @@
-.navbar{
-    height: 90px;
-    width: 100%;
-    background-color: rgb(42, 42, 42);
-    display: flex;
-    align-items: center;
-    padding-left: 10px;
-    justify-content: space-between;
+.navbar {
+  height: 90px;
+  width: 100%;
+  background-color: rgb(42, 42, 42);
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  justify-content: space-between;
 }
-.left{
-    font-size: 30px;
-    font-family:'Courier New', Courier, monospace;
+.left {
+  font-size: 30px;
+  font-family: "Courier New", Courier, monospace;
 }
-.center{
-    display: flex;
+.center {
+  display: flex;
 }
-.search-opt{
-    width: 40px;
-    height: 40px;
-    background-color: black;
-    border-radius:100% 0 0  100%;
-border-top: 1px solid;
-border-left: 1px solid;
-border-bottom: 1px solid;
+.search-opt {
+  width: 40px;
+  height: 40px;
+  background-color: black;
+  border-radius: 100% 0 0 100%;
+  border-top: 1px solid;
+  border-left: 1px solid;
+  border-bottom: 1px solid;
 }
-input{
-    background-color: black;
-    border: 1px solid;
-    outline: none;
-    padding-left: 5px;
-    font-size: 20px;
-    width: 150px;
-}
-
-.lengthIncrease{
-    animation: inputLengthInc 1s ease;
+input {
+  background-color: black;
+  border: 1px solid;
+  outline: none;
+  padding-left: 5px;
+  font-size: 20px;
+  width: 150px;
 }
 
-.lengthDecrease{
-    animation: inputLengthDec 1s ease;
+.lengthIncrease {
+  animation: inputLengthInc 1s ease;
+}
+
+.lengthDecrease {
+  animation: inputLengthDec 1s ease;
 }
 
 @keyframes inputLengthInc {
-    0%{
-        width: 150px;
-    }
-    100%{
-        width: 200px;
-    }
+  0% {
+    width: 150px;
+  }
+  100% {
+    width: 200px;
+  }
 }
 @keyframes inputLengthDec {
-    0%{
-        width: 200px;
-    }
-    100%{
-        width: 150px;
-    }
+  0% {
+    width: 200px;
+  }
+  100% {
+    width: 150px;
+  }
 }
-@media (max-width:600px) {
-    .left{
-        font-size: 20px;
-    }
+@media (max-width: 600px) {
+  .left {
+    font-size: 20px;
+  }
 }
