--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -14,6 +14,9 @@
 .center {
   display: flex;
 }
+i{
+  color: white;
+}
 .search-opt {
   width: 40px;
   height: 40px;
@@ -22,6 +25,9 @@
   border-top: 1px solid;
   border-left: 1px solid;
   border-bottom: 1px solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 input {
   background-color: black;
